# bank2ledger-cli

./: Cargo.toml  README.md
assets/axis/: axis-2023-5153341817.csv
assets/test/: fidelity-1999.csv  sbi-05may.tsv
config/: amex.toml  axis.toml  fidelity.toml  hsbc.toml  monzo-deprecated.toml  monzo.toml  post-office.toml  sbi.toml  schwab-non-trades.toml  schwab-trades.toml  schwab.toml
src/: bank2ledger.rs  ledger_record.rs  main.rs  settings.rs
