[package]
name = "bank2ledger-cli"
version = "0.1.0"
edition = "2021"
authors = ["Murali Suresh <muralisc@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive"]}
config = "0.13.3"
csv = "1.2.1"
env_logger = "0.10.0"
log = "0.4.17"
regex = "1.7.3"
serde = { version = "1.0.159", features = ["derive"] }
